--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,3 +40,8 @@ include = ["src/main.rs", "Cargo.toml", "info.plist", "info.png"]
 [dependencies]
 crates-io = "0.5.0"
 xml-rs = "0.3.5"
+
+
+[dependencies.clap]
+version = "2.20.0"
+default-features = false
