--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,8 +38,9 @@ include = ["src/main.rs", "Cargo.toml", "info.plist", "info.png"]
 
 
 [dependencies]
-crates-io = "0.5.0"
-xml-rs = "0.3.5"
+crates-io = "0.24"
+curl = "0.4.22"
+alfred = "4.0.1"
 
 
 [dependencies.clap]
